[gd_scene load_steps=4 format=3 uid="uid://bojby5emvgqx1"]

[ext_resource type="Script" uid="uid://bthhelr2iss3u" path="res://game_objects/pickups/!base_pickup.gd" id="1_jyypg"]
[ext_resource type="AudioStream" uid="uid://6cmbnc3fmgq5" path="res://sounds/aItem.wav" id="2_k4616"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4616"]
size = Vector2(32, 32)

[node name="BasePickup" type="Node2D"]
script = ExtResource("1_jyypg")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(16, 16)

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_k4616")

[node name="PickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k4616")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="finished" from="PickupSFX" to="." method="_on_pickup_sfx_finished"]
